welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:10: error: ')' expected but 'for' found.
	for (j<-0 to i-1) {
        ^